--- a/fsd-lab/ng-iot/index.html
+++ b/fsd-lab/ng-iot/index.html
@@ -3,7 +3,32 @@
     <head>
         <title>NG-IoT</title>
         <style>
-
+            body{
+                font-family: Arial, Helvetica, sans-serif;
+                background-color: #f4f9ff;
+                margin:auto;
+                padding: 0;
+            }
+            header{
+                color: white;
+                background-color: #003366;
+                padding: 20px;
+                margin: 0px;
+            }
+            footer{
+                text-align: center;
+                background-color: #000;
+                color: white;
+                position: fixed;
+                width: 100%;
+                padding: 10px;
+            }
+            h2{
+                color: #003366;
+            }
+            section{
+                margin-bottom: 20px;
+            }
         </style>
     </head>
 
